<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>ru.rzn.sbt</groupId>
    <artifactId>java.school.annotation</artifactId>
    <version>1.0-SNAPSHOT</version>
    <build>
<!--        <sourceDirectory>target/generated-sources/delombok</sourceDirectory>-->
<!--        <testSourceDirectory>target/generated-test-sources/delombok</testSourceDirectory>-->

        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>15</source>
                    <target>15</target>
                    <compilerArgs>--enable-preview</compilerArgs>
                </configuration>
            </plugin>

<!--            <plugin>-->
<!--                <groupId>org.projectlombok</groupId>-->
<!--                <artifactId>lombok-maven-plugin</artifactId>-->
<!--                <version>1.18.10.0</version>-->
<!--                <executions>-->
<!--                    <execution>-->
<!--                        <id>delombok</id>-->
<!--                        <phase>generate-sources</phase>-->
<!--                        <goals>-->
<!--                            <goal>delombok</goal>-->
<!--                        </goals>-->
<!--                        <configuration>-->
<!--                            <addOutputDirectory>false</addOutputDirectory>-->
<!--                            <sourceDirectory>src/main/java</sourceDirectory>-->
<!--                        </configuration>-->
<!--                    </execution>-->
<!--                    <execution>-->
<!--                        <id>test-delombok</id>-->
<!--                        <phase>generate-test-sources</phase>-->
<!--                        <goals>-->
<!--                            <goal>testDelombok</goal>-->
<!--                        </goals>-->
<!--                        <configuration>-->
<!--                            <addOutputDirectory>false</addOutputDirectory>-->
<!--                            <sourceDirectory>src/test/java</sourceDirectory>-->
<!--                        </configuration>-->
<!--                    </execution>-->
<!--                </executions>-->
<!--            </plugin>-->

        </plugins>
    </build>
    <dependencies>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>1.7.12</version>
        </dependency>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>1.18.10</version>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.12</version>
            <scope>test</scope>
        </dependency>


    </dependencies>

</project>